--- a/css/style.css
+++ b/css/style.css
@@ -23,12 +23,14 @@ body {
     height: 200px;
     width: 200px;
     transition: 1000ms;
+    background-color: black;
 }
 
 .rectangle {
     height: 200px;
     width: 400px;
     transition: 1000ms;
+    background-color: black;
 }
 
 .circle {
@@ -36,4 +38,5 @@ body {
     width: 200px;
     border-radius: 50%;
     transition: 1000ms;
+    background-color: black;
 }
